more elegant getPath method